added login link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./assets/images/SateeqLogo.png" class="brand-logo" alt="" srcset=""/>
             </div>
             <div class="btn-div">
-                <button class="login-btn">Log In</button>
+                <button class="login-btn" onclick="window.location.href='https://sateeq.pensil.in/login'" >Log In</button>
                 <button class="signup-btn">Sign Up</button>
             </div>
             
