--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <div class="timer-blocks">
                         <p class="timer-heads"> Days </p>
                         <div class="timer-time-div">
-                            <div class="timer-time">3</div>
-                            <div class="timer-time">0</div>
+                            <div class="timer-time" id="day_0"></div>
+                            <div class="timer-time" id="day_1"></div>
                             <span class="time-colons">:</span>
                         </div>
                     </div>
@@ -73,8 +73,8 @@
                     <div class="timer-blocks">
                         <p class="timer-heads"> Hours </p>
                         <div class="timer-time-div">
-                            <div class="timer-time">2</div>
-                            <div class="timer-time">1</div>
+                            <div class="timer-time" id="hr_0"></div>
+                            <div class="timer-time" id="hr_1"></div>
                             <span class="time-colons">:</span>
                         </div>
                             
@@ -83,8 +83,8 @@
                     <div class="timer-blocks">
                         <p class="timer-heads"> Minutes </p>
                         <div class="timer-time-div">
-                            <div class="timer-time">5</div>
-                            <div class="timer-time">6</div>
+                            <div class="timer-time" id="min_0"></div>
+                            <div class="timer-time" id="min_1"></div>
                         </div>
                     </div>
                     
@@ -141,6 +141,6 @@
             </p>
         </div>
     </div>
-<script src="./assets/scripts/bootstrap.min.js"></script>
+<script src="./assets/scripts/script.js"></script>
 </body>
 </html>
