--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./assets/images/SateeqLogoFooter.svg" class="brand-logo" alt="" srcset=""/>
             </div>
             <div class="btn-div">
-                <button class="get-early-access-header-btn">Get Early Access</button>
+                <button class="get-early-access-header-btn" onclick="window.location.href='https://form.typeform.com/to/rDwuhx7u';">Get Early Access</button>
             </div>
             
         </div>
@@ -28,7 +28,7 @@
                     <p class="hero-text">
                         Sateeq provides you opportunities to invest in exciting startups with small amounts. You can be the first one to invest in the next big thing!                     
                     </p>
-                    <button class="hero-early-access-btn">
+                    <button class="hero-early-access-btn" onclick="window.location.href='https://form.typeform.com/to/rDwuhx7u';">
                         Get Early Access
                     </button>
                 </div>
